--- a/users.html
+++ b/users.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Авторизация</title>
+    <title>Пользователи</title>
 </head>
 <body>
 <div class="container">
@@ -17,7 +17,7 @@
     </div>
 </header>
 <main class="main mt-4">
-    <h1 class="text-center">Авторизация</h1>
+    <h1 class="text-center">Все пользователи</h1>
     <div class="wrapper flex-column">
         <div class="mt-3">
             <input class="p-2 input" name="login" type="text" placeholder="Логин">
@@ -30,7 +30,6 @@
         </div>
         <div class="bg-danger p-3 mb-4 message hidden"></div>
     </div>
-    <a href="/index.html">Шифт</a>
 </main>
 <footer>
     <div class="footer mt-4 mb-4 p-3">
