--- a/orders.html
+++ b/orders.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
     <title>Продукты заказа</title>
+    <script src="js/tailwind.js"></script>
 </head>
 <body>
 <div class="container">
@@ -18,8 +19,7 @@
 </header>
 <main class="main mt-4">
     <h1 class="text-center">Продукты заказа</h1>
-    <div class="wrapper flex-column">
-
+    <div class="wrapper flex-column margin-left">
     </div>
 </main>
 <footer>
