--- a/shifts.html
+++ b/shifts.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Добавить смену</title>
+    <title>Смены</title>
+    <script src="js/tailwind.js"></script>
 </head>
 <body>
 <div class="container">
@@ -17,7 +18,7 @@
     </div>
 </header>
 <main class="main mt-4">
-    <h1 class="text-center">Добавление смены</h1>
+    <h1 class="text-center">Смены</h1>
     <div class="wrapper flex-column">
 
     </div>
