--- a/shiftSingle.html
+++ b/shiftSingle.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Заказы</title>
+    <title>Смена</title>
     <script src="js/tailwind.js"></script>
 </head>
 <body>
@@ -18,8 +18,12 @@
     </div>
 </header>
 <main class="main mt-4">
-    <h1 class="text-center">Заказы</h1>
-    <div class="wrapper flex-column margin-left">
+    <h1 class="text-center">Смена</h1>
+    <div class="wrapper flex-column text-left">
+        <div>
+
+        </div>
+        <select></select>
     </div>
 </main>
 <footer>
@@ -27,7 +31,7 @@
         sdddddddddddddddd
     </div>
 </footer>
-    <script src="js/orders.js"></script>
+    <script src="js/shiftSingle.js"></script>
     <script src="js/bootstrap.js"></script>
 </div>
 </body>
