--- a/shiftSingle.html
+++ b/shiftSingle.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
     <title>Смена</title>
-    <script src="js/tailwind.js"></script>
+    <!--script src="js/tailwind.js"></script-->
 </head>
 <body>
 <div class="container">
@@ -20,10 +20,7 @@
 <main class="main mt-4">
     <h1 class="text-center">Смена</h1>
     <div class="wrapper flex-column text-left">
-        <div>
 
-        </div>
-        <select></select>
     </div>
 </main>
 <footer>
