--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Смена</title>
-    <script src="js/tailwind.js"></script>
+    <title>Главная</title>
 </head>
 <body>
 <div class="container">
@@ -18,9 +17,9 @@
     </div>
 </header>
 <main class="main mt-4">
-    <h1 class="text-center">Смена</h1>
-    <div class="wrapper flex-column text-left">
-
+    <h1 class="text-center">Главная</h1>
+    <div class="wrapper flex-column">
+        ЫЫЫЫЫ
     </div>
 </main>
 <footer>
@@ -28,7 +27,6 @@
         sdddddddddddddddd
     </div>
 </footer>
-    <script src="js/shiftSingle.js"></script>
     <script src="js/bootstrap.js"></script>
 </div>
 </body>
