--- a/user.html
+++ b/user.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Добавить заказ</title>
+    <title>Добавить пользователя</title>
 </head>
 <body>
 <div class="container">
@@ -17,12 +17,21 @@
     </div>
 </header>
 <main class="main mt-4">
-    <h1 class="text-center">Добавление заказа</h1>
+    <h1 class="text-center">Добавление пользователя</h1>
     <div class="wrapper flex-column">
+        <div class="mt-3">
+            <input class="p-2 input" name="login" type="text" placeholder="Логин">
+        </div>
+        <div class="mt-3">
+            <input class="p-2 input" name="password" type="password" placeholder="Пароль">
+        </div>
+        <div class="mt-3">
+            <input class="p-2 input" name="name" type="text" placeholder="Имя">
+        </div>
+        <div class="mt-3">
+            <input class="p-2 input" name="role_id" type="number" placeholder="Роль">
+        </div>
         <div class="w-auto m-auto mt-3">
-            <div class="checkboxes">
-
-            </div>
             <button class="button p-2 mb-4">Добавить</button>
         </div>
         <div class="bg-danger p-3 mb-4 message hidden"></div>
@@ -33,7 +42,7 @@
         sdddddddddddddddd
     </div>
 </footer>
-    <script src="js/order.js"></script>
+    <script src="js/user.js"></script>
     <script src="js/bootstrap.js"></script>
 </div>
 </body>
