--- a/login.html
+++ b/login.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
+    <script src="js/tailwind.js"></script>
     <title>Авторизация</title>
 </head>
 <body>
