--- a/orderSingle.html
+++ b/orderSingle.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
+    <title>Заказ</title>
     <script src="js/tailwind.js"></script>
-    <title>Добавить смену</title>
 </head>
 <body>
 <div class="container">
@@ -18,18 +18,9 @@
     </div>
 </header>
 <main class="main mt-4">
-    <h1 class="text-center">Добавление смены</h1>
-    <div class="wrapper flex-column">
-        <div class="mt-3">
-            <input class="p-2 input" name="opened_at" type="datetime-local" placeholder="Начало смены">
-        </div>
-        <div class="mt-3">
-            <input class="p-2 input" name="closed_at" type="datetime-local" placeholder="Конец смены">
-        </div>
-        <div class="mt-3">
-            <button class="button p-2 mb-4">Добавить</button>
-        </div>
-        <div class="bg-danger p-3 mb-4 message hidden"></div>
+    <h1 class="text-center">Заказ</h1>
+    <div class="wrapper flex-column text-left">
+
     </div>
 </main>
 <footer>
@@ -37,7 +28,7 @@
         sdddddddddddddddd
     </div>
 </footer>
-    <script src="js/shift.js"></script>
+    <script src="js/orderSingle.js"></script>
     <script src="js/bootstrap.js"></script>
 </div>
 </body>
