--- a/users.html
+++ b/users.html
@@ -20,16 +20,7 @@
 <main class="main mt-4">
     <h1 class="text-center">Все пользователи</h1>
     <div class="wrapper flex-column">
-        <div class="mt-3">
-            <input class="p-2 input" name="login" type="text" placeholder="Логин">
-        </div>
-        <div class="mt-3">
-            <input class="p-2 input" name="password" type="password" placeholder="Пароль">
-        </div>
-        <div class="w-auto m-auto mt-3">
-            <button class="button p-2 mb-4">Войти</button>
-        </div>
-        <div class="bg-danger p-3 mb-4 message hidden"></div>
+
     </div>
 </main>
 <footer>
@@ -37,7 +28,7 @@
         sdddddddddddddddd
     </div>
 </footer>
-    <script src="js/login.js"></script>
+    <script src="js/users.js"></script>
     <script src="js/bootstrap.js"></script>
 </div>
 </body>
