--- a/userSingle.html
+++ b/userSingle.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/style.css">
+    <title>Пользователь</title>
     <script src="js/tailwind.js"></script>
-    <title>Авторизация</title>
 </head>
 <body>
 <div class="container">
@@ -18,18 +18,9 @@
     </div>
 </header>
 <main class="main mt-4">
-    <h1 class="text-center">Авторизация</h1>
-    <div class="wrapper flex-column">
-        <div class="mt-3">
-            <input class="p-2 input" name="login" type="text" placeholder="Логин">
-        </div>
-        <div class="mt-3">
-            <input class="p-2 input" name="password" type="password" placeholder="Пароль">
-        </div>
-        <div class="w-auto m-auto mt-3">
-            <button class="button p-2 mb-4">Войти</button>
-        </div>
-        <div class="bg-danger p-3 mb-4 message hidden"></div>
+    <h1 class="text-center">Пользователь</h1>
+    <div class="wrapper flex-column text-left">
+
     </div>
 </main>
 <footer>
@@ -37,7 +28,7 @@
         sdddddddddddddddd
     </div>
 </footer>
-    <script src="js/login.js"></script>
+    <script src="js/userSingle.js"></script>
     <script src="js/bootstrap.js"></script>
 </div>
 </body>
