--- a/orderReview.html
+++ b/orderReview.html
@@ -20,8 +20,8 @@
 <main class="main mt-4">
     <h1 class="text-center">Добавление отзыва</h1>
     <div class="wrapper flex-column">
-        <div class="mt-3">
-            <textarea class="p-2 input" name="content" type="text" placeholder="Оставьте отзыв"></textarea>
+        <div class="mt-3 w-50">
+            <textarea class="p-2 input w-100" name="content" type="text" placeholder="Оставьте отзыв"></textarea>
         </div>
         <div class="w-auto m-auto mt-3">
             <button class="button p-2 mb-4">Добавить</button>
